[Fix] Stretch sidebar content with align-items and gap -> End of the exercise

--- a/grid/03-grid-layout-3/style.css
+++ b/grid/03-grid-layout-3/style.css
@@ -1,4 +1,4 @@
-* {
+*{
   margin: 0;
   padding: 0;
 }
@@ -22,7 +22,7 @@
   background-color: #393f4d;
   display: inline-grid;
   grid-template-columns: 40% 60%;
-  grid-column: 1 / 3;
+  grid-column: 1 / span 2;
 
 }
 
@@ -47,7 +47,10 @@
 
 .sidebar {
   background-color: #FF7755;
-  grid-column: 1 / 2;
+  grid-column: 1 / span 1;
+  grid-row: 2/4;
+  display: grid;
+  grid-gap: 50px
 }
 
 .sidebar .photo {
@@ -66,13 +69,14 @@
   color: black;
   font-size: 16px;
   font-weight: normal;
+  align-items: center;
+
 }
 
 .nav {
   background-color: #FF7755;
-  grid-column: 2 / 3;
-  display: grid;
-  align-content: center;
+  grid-column: 2 / span 1;
+  align-self: start;
 }
 
 .nav ul {
@@ -88,7 +92,7 @@
 
 .article {
   background-color: #bccbde;
-  grid-column: 2 / 3;
+  grid-column: 2 / span 1;
   display: grid;
   grid-template-columns:repeat(auto-fit,minmax(250px, 1fr));
   grid-gap: 15px;
@@ -121,7 +125,7 @@
 
 .footer {
   background-color: #393f4d;
-  grid-column: 1 / 3;
+  grid-column: 1 / span 2;
 }
 
 .footer p {
